Just show spinner in spinner modal

--- a/src/app/core-ui/core-spinner-modal/core-spinner-modal.component.scss
+++ b/src/app/core-ui/core-spinner-modal/core-spinner-modal.component.scss
@@ -1,3 +1,12 @@
 .core-spinner-modal .modal-dialog {
     max-width: 122px;
 }
+
+.core-spinner-modal .modal-content {
+    border: none;
+    background-color: transparent;
+}
+
+.core-spinner-modal .fading-circle-spinner .circle:before {
+    background-color: #3DF !important;
+}
