--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,4 +5,5 @@
     <core-routing-tab title="Date Picker" [route]="['date-picker-demo']"></core-routing-tab>
     <core-routing-tab title="Spinner" [route]="['spinner-demo']"></core-routing-tab>
     <core-routing-tab title="Modals" [route]="['modal-demo']"></core-routing-tab>
+    <core-routing-tab title="Forms" [route]="['forms-demo']"></core-routing-tab>
 </core-routing-tabset>
