--- a/src/app/form-demo/form-demo.component.html
+++ b/src/app/form-demo/form-demo.component.html
@@ -1,12 +1,35 @@
 <form #frmTop="ngForm" name="frmTop" novalidate>
     <div *ngIf="isDataLoaded" class="form-demo">
-        <div class="row actions">
-            <div class="col-12">
-                <button class="btn btn-success" (click)="submit()">Submit</button>
-                <button class="btn btn-warning" (click)="reset()">Reset</button>
-                <button class="btn btn-danger" (click)="simulateError()">Simulate Error</button>
+
+        <div class="sticky-top page-header mb-2">
+            <nav class="navbar navbar-inverse bg-primary">
+                <div class="row">
+                    <div class="col-xs-12 col-lg">
+                        <span class="navbar-brand page-title">Account Approval Request - {{account.name}}</span>
+                    </div>
+                    <div class="col-xs-12 col-lg">
+                        <div class="float-lg-right">
+                            <button class="btn btn-success" (click)="submit()">Submit</button>
+                            <button class="btn btn-warning" (click)="reset()">Reset</button>
+                            <div class="form-check-inline text-white">
+                                <label class="form-check-label">
+                                    <input name="chkError" class="form-check-input" type="checkbox" [(ngModel)]="isSimulatingError" />
+                                    Simulate Error
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <div class="page-error-summary" *ngIf="isErrorSummaryShown(frmTop)">
+                <div class="alert alert-danger rounded-0" role="alert">
+                    <span class="fa fa-exclamation-circle"></span>
+                    <strong>Validation Error!</strong>
+                    Please correct the issues below to continue.
+                </div>
             </div>
         </div>
+
         <div class="account-details">
             <core-panel iconClass="fa fa-id-card" title="Account Details" [status]="getPanelStatus(frmAccount)">
                 <div ngModelGroup="frmAccount" #frmAccount="ngModelGroup" novalidate>
@@ -34,7 +57,8 @@
                 </div>
             </core-panel>
         </div>
-        <div class="address">
+
+        <div class="address mb-2">
             <core-panel iconClass="fa fa-address-book" title="Contact Information" [status]="getPanelStatus(frmAddress)">
                 <div ngModelGroup="frmAddress" #frmAddress="ngModelGroup" name="frmAddress" novalidate>
                     <div class="form-group row">
@@ -160,6 +184,21 @@
                 </div>
             </core-panel>
         </div>
+
+
+        <footer class="page-footer bg-primary text-white">
+            <div class="row">
+                <div class="col">
+                    <a class="support-link" href="mailto:support@x.com">Need help?</a>
+                </div>
+                <div class="col">
+                    <div class="pull-right">
+                        <span class="app-version">v0.0.1</span>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
     </div>
 </form>
 <core-spinner-modal #spinnerModal></core-spinner-modal>
@@ -167,5 +206,5 @@
     {{confirmationMessage}}
 </core-confirmation-modal>
 <core-alert-modal #errorModal title="Error">
-    {{errorMessage}}
+    <span class="error-message-icon fa fa-exclamation-triangle"></span> {{errorMessage}}
 </core-alert-modal>
