--- a/src/app/form-demo/form-group.component.html
+++ b/src/app/form-demo/form-group.component.html
@@ -2,6 +2,6 @@
     <ng-content></ng-content>
     <div class="form-control-feedback" *ngIf="isControlInvalid()">
         <span *ngIf="isRequiredError()">This field is required.</span>
-        <span *ngIf="isEmailError()">You must provide a valid email.</span>
+        <span *ngIf="isEmailError()">A valid email is required.</span>
     </div>
 </div>
